Color scheme changes finished, font changes finished, layout changes in progress

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,7 +35,7 @@ layout: navigation
 	{% assign post_last = post_list.size | minus: 1 %}
 
 	<ul>
-		<li>© {{ site.author }}{% if category_name == "engagement" or category_name == "wedding" %} (text)<br>© Carl Bower (photo){% endif %}</li>
+		<li>©️ {{ site.author }}{% if category_name == "engagement" or category_name == "wedding" %} (text)<br>©️ Carl Bower (photo){% endif %}</li>
 		<li>
 		{% if post_before < 0 %}
 			<span class="inactive-link"><span aria-hidden="true">‹ </span>Previous</span>
