--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,20 +71,24 @@
 		<meta property="og:image" content="{{ site.url }}{{ page_image }}">
 		<meta property="og:url" content="{{ site.url }}{{ page.url }}">
 
+		{% include font-headers.html %}
+
 		<link rel="stylesheet" href="/css/normalize.css">
+		<link rel="stylesheet" href="/css/fonts.css">
 		{% if page_path_array[1] == "engagement" or page_path_array[1] == "wedding" or page_path_array[1] == "digital-orrery" or page_path_array[1] == "photography" %}
-			<link rel="stylesheet" href="/css/page-everforest-dark-hard.css" media="screen">
-			<link rel="stylesheet" href="/css/code-everforest-light-hard.css" media="screen">
+			<link rel="stylesheet" href="/css/page-dark.css" media="screen">
+			<link rel="stylesheet" href="/css/code-dark.css" media="screen">
 		{% else %}
-			<link rel="stylesheet" href="/css/page-everforest-light-hard.css" media="screen">
-			<link rel="stylesheet" href="/css/code-everforest-dark-hard.css" media="screen">
+			<link rel="stylesheet" href="/css/page-light.css" media="screen">
+			<link rel="stylesheet" href="/css/code-light.css" media="screen">
 		{% endif %}
-		<link rel="stylesheet" href="/css/page-everforest-print.css" media="print">
-		<link rel="stylesheet" href="/css/code-everforest-light-hard.css" media="print">
 		<link rel="stylesheet" href="/css/layout.css">
 		<link rel="stylesheet" href="/css/layout-967.css" media="(max-width: 967px)">
 		<link rel="stylesheet" href="/css/layout-922.css" media="(max-width: 922px)">
 		<link rel="stylesheet" href="/css/layout-788.css" media="(max-width: 788px)">
+		<link rel="stylesheet" href="/css/fonts-print.css" media="print">
+		<link rel="stylesheet" href="/css/page-print.css" media="print">
+		<link rel="stylesheet" href="/css/code-print.css" media="print">
 		<link rel="stylesheet" href="/css/print.css" media="print">
 	</head>
 	<body class="{{ site.url | replace: 'https://' | split: '.' | first }} {{ page.layout }}" id="{{ page.name | replace: '.md', '' }}">
