--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -3,11 +3,7 @@ layout: default
 ---
 <div class="outer-wrapper">
 	<div class="inner-wrapper">
-		{% if site.name == "Cardboard Iguana Security" %}
-			<div title="{{ site.name }}" aria-hidden="true" id="logo">📦🦎🛡️</div>
-		{% else %}
-			<img src="/{{ site.icon }}" alt="{{ site.name }}" aria-hidden="true" id="logo">
-		{% endif %}
+		<div title="{{ site.name }}" aria-hidden="true" id="logo">{{ site.logo }}</div>
 		{{ content }}
 	</div>
 </div>
