--- a/_layouts/navigation.html
+++ b/_layouts/navigation.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <nav class="outer-wrapper">
 	<ul>
-		<li><a href="/index.html">{% if site.name == "Cardboard Iguana Security" %}<span title="{{ site.name }}" aria-hidden="true" id="logo">📦🦎🛡️</span>{% else %}<img src="/{{ site.icon }}" alt="{{ site.name }}" title="{{ site.name }}" aria-hidden="true" id="logo">{% endif %}<span class="site-title"> {{ site.name }}</span></a></li>
+		<li><a href="/index.html"><span title="{{ site.name }}" aria-hidden="true" id="logo">{{ site.logo }}</span><span class="site-title"> {{ site.name }}</span></a></li>
 		{% if site.name == "Cardboard Iguana Security" %}
 			<li><a href="/log.html"><span aria-hidden="true">📓 </span>Log</a></li>
 			<li><a href="/notes.html"><span aria-hidden="true">📚 </span>Notes</a></li>
