--- a/css/layout-922.css
+++ b/css/layout-922.css
@@ -1,5 +1,6 @@
 /* General per-class and ID styling */
 
+/*
 nav img#logo {
 	margin-right: 0;
 }
@@ -7,3 +8,4 @@ nav img#logo {
 .site-title {
 	display: none;
 }
+*/
