--- a/css/page-print.css
+++ b/css/page-print.css
@@ -18,6 +18,7 @@
 	--foreground: #000000;
 	--de-emphasis: #414141;
 	--selection: #8da10153;
+	--scrollbar: #4141417f;
 	--red: #f85552;
 	--yellow: #dfa000;
 	--green: #8da101;
