--- a/css/layout-788.css
+++ b/css/layout-788.css
@@ -1,3 +1,4 @@
+/*
 nav ul {
 	display: block;
 	text-align: center;
@@ -40,3 +41,4 @@ footer ul li:last-child {
 	text-align: center;
 	order: 2;
 }
+*/
