--- a/css/layout.css
+++ b/css/layout.css
@@ -39,6 +39,7 @@ pre {
 a {
 	color: var(--green);
 	text-decoration: none;
+	font-weight: 500;
 }
 
 a:active,
@@ -46,35 +47,18 @@ a:hover {
 	color: var(--yellow	);
 }
 
-nav {
-	flex: 0 0 auto;
-	border-bottom: 1px solid var(--de-emphasis);
-}
-
 nav ul {
 	padding: 0;
-	display: flex;
-	justify-content: space-between;
+	margin-bottom: 0.618033em;
 }
 
 nav ul li {
-	flex: 0 1 0;
-	display: block;
-	padding: 0 0.618033em;
-	margin: auto 0;
-	text-align: right;
+	display: inline-block;
 	white-space: nowrap;
 }
 
-nav ul li:first-child {
-	flex: 1 1 0;
-	padding-top: 0;
-	padding-left: 0;
-	text-align: left;
-}
-
-nav ul li:last-child {
-	padding-right: 0;
+nav ul li:after {
+	content: "\00a0/\00a0";
 }
 
 article,
@@ -94,10 +78,7 @@ article img {
 h1 {
 	font-size: 161.8033%;
 	font-weight: 500;
-	margin: 1.618033em auto 1em;
-	padding-bottom: 0.3090rem;
-	text-align: center;
-	border-bottom: 1px solid var(--de-emphasis);
+	margin: 1.618033em 0 1em;
 }
 
 h2 {
@@ -190,39 +171,6 @@ hr {
 	width: 61.8033%;
 }
 
-hr:last-of-type {
-	width: 100%
-}
-
-footer {
-	flex: 0 0 auto;
-	border-top: 1px solid var(--de-emphasis);
-}
-
-footer ul {
-	padding: 0;
-	display: flex;
-	justify-content: space-between;
-}
-
-footer ul li {
-	flex: 1 1 0;
-	display: block;
-	padding: 0 0.618033em;
-	text-align: center;
-	white-space: nowrap;
-}
-
-footer ul li:first-child {
-	padding-left: 0;
-	text-align: left;
-}
-
-footer ul li:last-child {
-	padding-right: 0;
-	text-align: right;
-}
-
 /* Scrollbar styling */
 
 * {
@@ -266,16 +214,14 @@ footer ul li:last-child {
 	margin: 0 auto;
 }
 
+article.outer-wrapper .inner-wrapper > :first-child,
+div.outer-wrapper .inner-wrapper > :first-child {
+	margin-top: 0;
+}
+
 .table-wrapper {
 	max-width: 100%;
 	overflow-x: auto;
-}
-
-nav span#logo {
-	display: inline-block;
-	margin-right: 0.1545em;
-	font-size: 161.8033%;
-	vertical-align: middle;
 }
 
 div.highlight {
@@ -289,6 +235,10 @@ pre.highlight {
 	padding: 0.3090rem 0;
 }
 
+footer .inner-wrapper {
+	border-top: 1px solid var(--de-emphasis);
+}
+
 /* Page-specific styling */
 
 .homepage div#logo {
@@ -299,7 +249,10 @@ pre.highlight {
 }
 
 .homepage #logo + h1 {
-	margin-top: 0;
+	margin: 0 auto 1em;
+	padding-bottom: 0.618033em;
+	text-align: center;
+	border-bottom: 1px solid var(--de-emphasis);
 }
 
 .site-title {
