--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,37 @@ layout: navigation
 
 <footer class="outer-wrapper">
 	<div class="inner-wrapper">
+		{% assign page_path_array = page.url | split: "/" %}
+		{% assign category_name = page_path_array[1] %}
+	
+		{% assign post_list = "" | split: "" %}
+	
+		{% for the_page in site.pages %}
+			{% assign page_path_array = the_page.url | split: "/" %}
+			{% if page_path_array[1] == category_name %}
+				{% unless the_page.content contains "#Draft" %}
+					{% assign post_list = post_list | push: the_page %}
+				{% endunless %}
+			{% endif %}
+		{% endfor %}
+		{% assign post_list = post_list | uniq | sort: "url" %}
+	
+		{% for the_post in post_list %}
+			{% if the_post.url == page.url %}
+				{% assign post_index = forloop.index0 %}
+				{% break %}
+			{% endif %}
+		{% endfor %}
+	
+		{% assign post_before = post_index | minus: 1 %}
+		{% assign post_after = post_index | plus: 1 %}
+		{% assign post_last = post_list.size | minus: 1 %}
+
+		<p>Category navigation:</p>
+		<ul>
+			<li>{% if post_after > post_last %}No next post{% else %}<a href="{{ post_list[post_after].url }}">Next post</a>{% endif %}</li>
+			<li>{% if post_before < 0 %}No previous post{% else %}<a href="{{ post_list[post_before].url }}">Previous post</a>{% endif %}</li>
+		</ul>
 		<p>Site navigation:</p>
 		<ul>
 			<li><a href="/index.html">Home</a></li>
@@ -29,7 +60,7 @@ layout: navigation
 		<p>Page information:</p>
 		<ul>
 			<li><a href="https://github.com/necopinus/{{ site.url  | replace: 'https://' }}/blob/main/{{ page.path }}">View on GitHub</a></li>
-			<li>©️ {{ site.author }}{% if category_name == "engagement" or category_name == "wedding" %} (text) &amp; Carl Bower (photo){% endif %}</li>
+			<li>©️ {{ site.author }}{% if category_name == "engagement" or category_name == "wedding" %} (text)<br>©️ Carl Bower (photo){% endif %}</li>
 		</ul>
 	</div>
 </footer>
