--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; object-src 'none'; child-src 'self'; upgrade-insecure-requests; block-all-mixed-content">
 		<meta name="viewport" content="width=device-width">
 
 		{% assign page_title = page.title %}
